--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 body {
   font-family: "Inter", sans-serif;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   /* height: 100vh; */
@@ -34,8 +35,12 @@ body {
   overflow: hidden;
 }
 
+h1 {
+  font-size: 48px;
+}
+
 .imagesContainer {
-  margin-top: 3rem;
+  /* margin-top: 3rem; */
   display: flex;
   width: 90vw;
 }
@@ -44,7 +49,7 @@ body {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 80vh;
+  height: 75vh;
   border-radius: 50px;
   cursor: pointer;
   flex: 0.5;
